<resources>
    <string name="app_name">Wat Can I Take?</string>
    <string name="about_tab_title">About</string>
    <string name="schedule_tab_title">Schedule</string>
    <string name="future_courses">Wat Can I Take?</string>
    <string name="terms_offered">Terms Offered</string>
    <string name="offered_online">Offered Online</string>
    <string name="units">Units</string>
    <string name="instructions">Instructions</string>
    <string name="prerequisites">Prerequisites</string>
    <string name="description">Description</string>
    <string name="antirequisites">Antirequisites</string>
    <string name="web_url">Web URL</string>
    <string name="prereqs">Prereqs</string>
    <string name="prereqs_list_description">Prerequisites for %s. Note that some courses may be antirequisites of eachother</string>
    <string name="future_courses_description">Here are some courses that require a successful completion of %s.</string>
    <string name="empty_list_text">There are no courses that match this criteria.</string>
    <string name="home_message">Search for courses or browse courses by subject</string>
    <string name="subject_list_description">All %s courses.</string>
    <string name="subject_list_title">%s Courses</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="sort_by_name">Name</string>
    <string name="search_results_text">Showing courses matching \"%s\"</string>
    <string name="search_results_title">Search Results</string>
    <string name="home">Home</string>
    <string name="dash_binary_separator_format">%s - %s</string>
    <string name="number_spots_format">Seats: %d/%d</string>
    <string name="no_schedule_found">No schedule could be found for %s.</string>
    <string name="schedule_for_course">Schedule for %s.</string>
</resources>
