<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom|collapseActionView">

        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:icon="@drawable/ic_sort_by_alpha_black_24dp"
                android:title="@string/sort_by_name">
            </item>
        </menu>

    </item>

</menu>