<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/double_space"
        android:orientation="vertical">

        <TextView
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_text_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/space" />

        <!-- Description -->
        <LinearLayout
            style="@style/CourseDetailLinearLayout"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Prerequisites -->
        <LinearLayout style="@style/CourseDetailLinearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/prerequisites" />

            <TextView
                android:id="@+id/prereqs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Antirequisites -->
        <LinearLayout style="@style/CourseDetailLinearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/antirequisites" />

            <TextView
                android:id="@+id/antirequisites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <android.support.v7.widget.GridLayout xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space"
            grid:columnCount="2"
            grid:rowCount="2">

            <!-- Terms offered -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:orientation="vertical"
                grid:layout_columnWeight="2.5"
                grid:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/terms_offered" />

                <TextView
                    android:id="@+id/terms_offered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Offered online -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space"
                android:orientation="vertical"
                grid:layout_columnWeight="2.5"
                grid:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/offered_online" />

                <TextView
                    android:id="@+id/is_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Units-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                grid:layout_columnWeight="2"
                grid:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/units" />

                <TextView
                    android:id="@+id/units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Instructions -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                grid:layout_columnWeight="2"
                grid:layout_gravity="fill_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/instructions" />

                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.GridLayout>

        <!-- Web URL -->
        <LinearLayout style="@style/CourseDetailLinearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/web_url" />

            <TextView
                android:id="@+id/web_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>